--- a/index.html
+++ b/index.html
@@ -1,131 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>NTA Result Login</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Result Login (Demo)</title>
+  <style>
+    :root{
+      --blue:#0b3c6f;
+      --dark:#08325c;
+      --green:#2e8b57;
+      --border:#d9d9d9;
+    }
+    *{box-sizing:border-box;font-family:Arial, Helvetica, sans-serif}
+    body{margin:0;background:#f5f7fb;color:#333}
 
-<style>
-body{
-  font-family: Arial, sans-serif;
-  background:#f2f2f2;
-}
-.box{
-  width:340px;
-  margin:80px auto;
-  background:#fff;
-  padding:20px;
-  border-radius:8px;
-  box-shadow:0 0 10px rgba(0,0,0,.2);
-}
-input,button{
-  width:100%;
-  padding:10px;
-  margin-top:10px;
-  font-size:15px;
-}
-button{
-  background:#0b3c6f;
-  color:#fff;
-  border:none;
-  cursor:pointer;
-}
-#captcha{
-  background:#eee;
-  text-align:center;
-  padding:8px;
-  margin-top:10px;
-  font-weight:bold;
-  letter-spacing:3px;
-}
-.pass-box{
-  position:relative;
-}
-.eye{
-  position:absolute;
-  right:10px;
-  top:50%;
-  transform:translateY(-50%);
-  cursor:pointer;
-}
-</style>
+    /* Header */
+    .topbar{
+      background:linear-gradient(180deg,var(--blue),var(--dark));
+      color:#fff;
+      padding:10px 14px;
+      text-align:center;
+      font-size:14px;
+    }
+    .topbar .title{font-weight:700;letter-spacing:.3px}
+
+    /* Card */
+    .wrap{display:flex;justify-content:center;padding:28px}
+    .card{
+      width:100%;max-width:520px;background:#fff;border-radius:4px;
+      box-shadow:0 6px 18px rgba(0,0,0,.08);overflow:hidden
+    }
+    .card-head{
+      background:linear-gradient(180deg,#123d6b,#0b2f57);
+      color:#fff;padding:10px 14px;font-weight:700;display:flex;align-items:center;gap:8px
+    }
+    .lock{font-size:16px}
+    .card-body{padding:18px}
+
+    .row{display:grid;grid-template-columns:180px 1fr;gap:10px;align-items:center;margin-bottom:12px}
+    label{font-size:13px;color:#444}
+    input{
+      height:36px;border:1px solid var(--border);border-radius:3px;padding:0 10px;font-size:14px
+    }
+    input:focus{outline:none;border-color:#7aa7ff}
+
+    .captcha-row{display:grid;grid-template-columns:180px 1fr;gap:10px;align-items:center;margin:12px 0}
+    .captcha-box{display:flex;align-items:center;gap:10px}
+    .captcha{
+      background:#0c3c6f;color:#fff;font-weight:700;letter-spacing:2px;
+      padding:8px 14px;border-radius:3px;user-select:none
+    }
+    .refresh{cursor:pointer;color:#1e8e3e;font-size:18px}
+
+    .actions{display:flex;justify-content:center;margin-top:10px}
+    .btn{
+      background:var(--green);color:#fff;border:none;border-radius:3px;
+      padding:10px 22px;font-weight:700;cursor:pointer
+    }
+    .btn:active{transform:translateY(1px)}
+
+    .footer{
+      margin-top:26px;background:#0b3c6f;color:#dfe9ff;
+      text-align:center;padding:10px;font-size:12px
+    }
+
+    @media (max-width:520px){
+      .row,.captcha-row{grid-template-columns:1fr}
+      label{margin-bottom:-6px}
+    }
+  </style>
 </head>
-
 <body>
-
-<div class="box">
-  <h3>NTA Result Login</h3>
-
-  <input id="app" type="text" inputmode="numeric"
-         placeholder="Application Number">
-
-  <div class="pass-box">
-    <input id="pass" type="password" placeholder="Password">
-    <span class="eye" onclick="togglePass()">👁️</span>
+  <div class="topbar">
+    <div class="title">JOINT ENTRANCE EXAMINATION (Main) – 2026</div>
+    <div>SESSION 1 (JANUARY 2026) • NTA SCORE CARD: Paper 1 (B.E./B.Tech.)</div>
   </div>
 
-  <div id="captcha"></div>
-  <input id="captchaInput" placeholder="Enter Captcha">
+  <div class="wrap">
+    <div class="card">
+      <div class="card-head"><span class="lock">🔒</span> View Result</div>
+      <div class="card-body">
+        <div class="row">
+          <label>Application Number :</label>
+          <input id="app" placeholder="Enter Application Number" />
+        </div>
+        <div class="row">
+          <label>Password :</label>
+          <input id="pass" type="password" placeholder="Enter Password" />
+        </div>
+        <div class="row">
+          <label>Enter CAPTCHA <span style="color:#1e8e3e">(case sensitive)</span> :</label>
+          <input id="captchaInput" placeholder="Type CAPTCHA" />
+        </div>
+        <div class="captcha-row">
+          <label>CAPTCHA :</label>
+          <div class="captcha-box">
+            <div id="captcha" class="captcha">ABCDE</div>
+            <div class="refresh" title="Refresh" onclick="genCaptcha()">🔄</div>
+          </div>
+        </div>
+        <div class="actions">
+          <button class="btn" onclick="login()">LOGIN</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <button onclick="login()">LOGIN</button>
-</div>
+  <div class="footer">
+    This site is designed and hosted by NIC PEP Division. The contents are provided by NTA.
+  </div>
 
-<script>
-/* 🔐 DATABASE */
-const db = {
-  "260310087055": {
-    password: "@Tushar638",
-    pdf: "260310087055.pdf"
-  }
-};
-
-/* CAPTCHA */
-function genCaptcha(){
-  document.getElementById("captcha").innerText =
-    Math.floor(1000 + Math.random() * 9000);
-}
-genCaptcha();
-
-/* EYE TOGGLE */
-function togglePass(){
-  const p = document.getElementById("pass");
-  p.type = p.type === "password" ? "text" : "password";
-}
-
-/* 🔥 FINAL LOGIN */
-function login(){
-
-  // 🔥 ONLY DIGITS ALLOWED
-  const app = document.getElementById("app")
-    .value.replace(/[^0-9]/g,"");
-
-  const pass = document.getElementById("pass").value;
-  const capIn = document.getElementById("captchaInput").value.trim();
-  const cap = document.getElementById("captcha").innerText;
-
-  if(app.length !== 12){
-    alert("Invalid Application Number");
-    return;
-  }
-
-  if(capIn !== cap){
-    alert("Captcha incorrect");
+  <script>
+    function genCaptcha(){
+      const chars='ABCDEFGHJKLMNPQRSTUVWXYZ23456789';
+      let s=''; for(let i=0;i<5;i++) s+=chars[Math.floor(Math.random()*chars.length)];
+      document.getElementById('captcha').innerText=s;
+    }
     genCaptcha();
-    return;
-  }
 
-  if(!db[app]){
-    alert("Invalid Application Number or Password");
-    return;
-  }
+    function login(){
+      const app = document.getElementById('app').value.trim();
+      const pass = document.getElementById('pass').value.trim();
+      const capIn = document.getElementById('captchaInput').value;
+      const cap = document.getElementById('captcha').innerText;
+      if(capIn !== cap){ alert('CAPTCHA incorrect'); genCaptcha(); return; }
 
-  if(db[app].password !== pass){
-    alert("Invalid Application Number or Password");
-    return;
-  }
+      // DEMO database (fake)
+      const db = {
+        "1234567890": { password:"demo123", name:"Tushar Nayare", percentile:98.76, phy:96, chem:99, maths:97 }
+      };
 
-  window.open(db[app].pdf,"_blank");
-}
-</script>
+      if(!db[app] || db[app].password !== pass){
+        alert('Invalid Application Number or Password (Demo)');
+        return;
+      }
 
+      // Show result
+      const r = db[app];
+      document.querySelector('.card-body').innerHTML = `
+        <h3 style="margin-top:0">Result (Demo)</h3>
+        <p><b>Name:</b> ${r.name}</p>
+        <p><b>Application No:</b> ${app}</p>
+        <hr/>
+        <p><b>Overall Percentile:</b> ${r.percentile}</p>
+        <table style="width:100%;border-collapse:collapse">
+          <tr><th style="border:1px solid #ddd;padding:6px">Physics</th><th style="border:1px solid #ddd;padding:6px">Chemistry</th><th style="border:1px solid #ddd;padding:6px">Maths</th></tr>
+          <tr><td style="border:1px solid #ddd;padding:6px;text-align:center">${r.phy}</td><td style="border:1px solid #ddd;padding:6px;text-align:center">${r.chem}</td><td style="border:1px solid #ddd;padding:6px;text-align:center">${r.maths}</td></tr>
+        </table>
+      `;
+    }
+  </script>
 </body>
 </html>
